# sharing

./: .#main.lisp  .dir-locals.el  .gitignore  README.md  cabal.project  flake.nix  main.lisp  mix.exs  package.json  sharing.asd  sharing.cabal  sharing.fasl  spago.yaml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1723gf3k284d66ji4n45c33dzjkr1kfz-source  260sd296lwlac8hcm5zjjp1q6dvm74qg-source  a0kjwwz3zc8i8r4zf9jvmc4k0iq82m8z-source  gbv0x1vw8w56qn6hjy502yjh42kw1k3s-source  jkc25bp6yvn1ql65k7fda9wbc2565ran-source  n83igfmalvrf4jrkjgp9bqq2hpj2fpmq-source  sh6chd57adm9l0ifnvb2c5vjpkpkgq8r-source
assets/css/: app.css
assets/js/: action-button-events.js  app.js  click.js  drag-and-drop.js  file-upload.js  gsap.js  key-events.js  live-file-input.js  mouse-events.js  omni-area-events.js  qr-code-events.js  state.js
client/: .dir-locals.el  Lib.hs  Main.hs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
frontend/: package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  Balanced.tsx  Code.tsx  Columns.tsx  Drop.tsx  Droparea.tsx  File.tsx  Info.tsx  Itemcard.tsx  Magnet.tsx  Upload.ts  index.css  prelude.ts
lib/: gsap.ex  sharing.ex  sharing_web.ex
lib/sharing/: application.ex
lib/sharing_web/: endpoint.ex  helpers.ex  router.ex  state.ex  telemetry.ex
public/: index.html  index.js
sample/: README.md  mix.exs
sample/config/: config.exs  dev.exs  prod.exs  (+2 more)
src/: Dragging.purs  Main.purs  mix.exs
(+73 files in other folders)
