cabal-version: 2.2
name:          sharing
version:       0.1.0.0
build-type:    Simple

common warnings
  ghc-options:
    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

executable client
  import:             wasm
  main-is:            Main.hs
  build-depends:      base, jsaddle, miso, lens, transformers
  other-modules:      Lib
  hs-source-dirs:     client
  default-language:   GHC2021
  default-extensions: CPP TemplateHaskell

